again on introduction

--- a/RASD/introduction.tex
+++ b/RASD/introduction.tex
@@ -9,4 +9,20 @@ This document is written for project managers, developers, testers and systems a
 
 \subsection{Scope}
 
-PowerEnJoy is a digital management system for a car-sharing service that exclusively employs electric cars. It provides a reliable and managed way for rent cars available in a given geographic area. 
+PowerEnJoy is a digital management system for a car-sharing service that exclusively employs electric cars.This car rental system provides an alternative solution to public transport, thus being not only eco-friendly, but also simple and reliable.
+
+The service is available to whomever has a valid driving license. Anybody who wants to register must provide a copy of it, along with his credentials and payment informations.
+
+Once registered, they will be allowed to search a car in a specific area, and reserve one for up to an hour before picking it up. The system will cancel the reservation in case of them failing to arrive to the car in time, will make that specific car available again and apply a fine to the user.
+Upon arrival to the car, the user will be able to get inside and drive it, at the cost of a per-minute fee of which he will be notified by the system through a screen on the car itself; this until the car will be left parked in a safe area, where the system will close the doors and make the vehicle available again.
+
+\subsection{Actors}
+\begin{itemize}
+	\item Driver: the only user of the system. He can register and log-in to the system, using it for the car-sharing service.  
+\end{itemize}
+
+\subsection{Goals}
+The goals of the PowerEnJoy service are the following:
+\begin{itemize}
+	\item {[G1]}
+\end{itemize}
