--- a/RASD/Rasd.tex
+++ b/RASD/Rasd.tex
@@ -2,6 +2,9 @@
 \usepackage{graphicx}
 \usepackage{titlesec}
 \usepackage{hyperref}
+\usepackage{float}
+\usepackage{amsmath}
+\numberwithin{figure}{section}
 \graphicspath{{Images/}}
 \setcounter{secnumdepth}{4}
 \hypersetup{
@@ -31,15 +34,9 @@
 	
 	\include{introduction}
 	
-	\include{Overall_description}
+	\include{overall_description}
 	
 	\include{requirements}
-	
-	\include{scenario}
-	
-	\include{uml}
-	
-	\include{alloy}
 	
 	\include{appendix}
 	
