--- a/RASD/appendix.tex
+++ b/RASD/appendix.tex
@@ -2,12 +2,12 @@
 \subsection{Used tools}
 To create the RASD we used the following tools:
 \begin{itemize}
-	\item \textbf{MikTex} \\ Distribution of the typesetting system LaTeX \\ \url{http://www.miktex.org/download } 
-	\item \textbf{TexStudio}\\ OpenSource cross-platform LaTeX editor we used to write the RASD. \\ \url{http://texstudio.sourceforge.net  } 
-	\item \textbf{StarUML}\\ UML modelling tool we used to build the graphs\\ \url{http://staruml.io/download } 
-	\item \textbf{Balsamiq}\\ The mockup builder we used to design the mockups. \\ \url{https://balsamiq.com/download/ } 
-	\item \textbf{Alloy analyzer 4}\\ used to build  strong and substantial models \\ \url{ http://alloy.mit.edu/alloy/download.html }
-	\item \textbf{GitHub desktop}\\ Desktop application of the web-based Git repository hosting service. Used to collaborate in the team and to have a track of the changes.  \\ \url{https://desktop.github.com/ } 
+	\item \textbf{MikTex} \\ Distribution of the typesetting system LaTeX \\ \url{http://miktex.org/} 
+	\item \textbf{TexStudio}\\ OpenSource cross-platform LaTeX editor we used to write the RASD. \\ \url{http://texstudio.sourceforge.net/} 
+	\item \textbf{StarUML}\\ UML modelling tool we used to build the graphs\\ \url{http://staruml.io/} 
+	\item \textbf{Balsamiq}\\ The mockup builder we used to design the mockups. \\ \url{https://balsamiq.com/} 
+	\item \textbf{Alloy analyzer 4}\\ used to build  strong and substantial models \\ \url{ http://alloy.mit.edu/alloy/}
+	\item \textbf{GitHub desktop}\\ Desktop application of the web-based Git repository hosting service. Used to collaborate in the team and to have a track of the changes.  \\ \url{https://desktop.github.com/} 
 \end{itemize}
 
 
@@ -26,4 +26,16 @@ This is the time spent redacting the RASD
 	
 	\bibitem{ieee-830-1198}
 	IEEE Standard 830-1998: \emph{IEEE Recommended Practice for Software Requirements Specifications}
+	
+	\bibitem{w3c-html5}
+	W3C, \emph{HTML5 - W3C Recommendation 28 October 2014}, \url{http://www.w3.org/TR/html5/}.
+	
+	\bibitem{w3c-css}
+	W3C, \emph{Cascading Style Sheets Level 2 Revision 1 (CSS 2.1) Specification}, \url{http://www.w3.org/TR/CSS21/}
+	
+	\bibitem{apple-ios-hig}
+	Apple, \emph{iOS Human Interface Guidelines}, \url{https://developer.apple.com/library/ios/documentation/UserExperience/Conceptual/MobileHIG/}
+	
+	\bibitem{google-android-hig}
+	Google, \emph{Android Developers - Design}, \url{https://developer.android.com/design/index.html}
 \end{thebibliography}
