--- a/RASD/Overall_description.tex
+++ b/RASD/Overall_description.tex
@@ -63,16 +63,10 @@ It's granted that both kinds of users have access to Internet.
 
 \subsubsection{Regulatory policies}
 Any driver must follow current traffic and regulamentation laws of the area where the system is operating its car-sharing service. Driving licenses from other countries must be compatible with the laws of the country where the service is operating.
+
 Aggiungere regolamentazioni di lavoro
 
-\subsubsection{Service policies}
-\begin{itemize}
-	\item The system must ask the user for the permission to acquire, store and process personal data and web cookies.
-	\item A driving license can't be associated to multiple driver accounts.
-	\item Drivers with status of pending payments can't delete their accounts and can't access to rental functions.
-	\item Drivers with invalid/expired driving license can't access to rental functions
-	\item Drivers can rent a single vehicle per time.
-\end{itemize}	
+The system must ask the driver for the permission to acquire, store and process personal data and web cookies.
 
 \subsubsection{Hardware limitations}
 The service requires an Internet connection fast enought to guarantee a fast response from the server and hardware architectures that can run properly the client side applications (web and mobile apps).
